--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "dplayer": "^1.27.1",
     "next": "13.4.18",
     "postcss": "8.4.28",
+    "rc-dplayer": "^0.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-markdown": "^8.0.7",
+    "swr": "^2.2.1",
+    "tailwindcss": "3.3.3",
+    "tw-elements": "1.0.0-beta3"
   }
 }
